--- a/myapp/milk_data/templates/milk_data/cow_detail.html
+++ b/myapp/milk_data/templates/milk_data/cow_detail.html
@@ -8,8 +8,9 @@
     <!-- We can reuse the same new CSS file -->
     <link rel="stylesheet" href="{% static 'milk_data/cow_detail.css' %}">
 </head>
-<body>
+<body style="background-image: url('https://i.pinimg.com/1200x/ed/86/a8/ed86a8008f408dfa45687c420dfef7ec.jpg'); background-size: 100% 100%; background-repeat: no-repeat; background-attachment: fixed;">
 
+    
     <div class="main-container">
         <header class="page-header">
             <h1>Cow Details</h1>
