--- a/myapp/milk_data/templates/milk_data/dashboard.html
+++ b/myapp/milk_data/templates/milk_data/dashboard.html
@@ -59,7 +59,7 @@
                         <td>{{ submission.supplier.district.name|default:"N/A" }}</td>
                         <td>
                             <!-- Add a class based on quality for styling -->
-                            <span class="quality-tag {{ submission.quality_of_milk|lower }}">
+                            <span >
                                 {{ submission.quality_of_milk }}    
                             </span>
                         </td>
