--- a/myapp/milk_data/templates/milk_data/dashboard.html
+++ b/myapp/milk_data/templates/milk_data/dashboard.html
@@ -58,11 +58,18 @@
                         <td>{{ submission.supplier.rf_no }}</td>
                         <td>{{ submission.supplier.district.name|default:"N/A" }}</td>
                         <td>
-                            <!-- Add a class based on quality for styling -->
-                            <span >
-                                {{ submission.quality_of_milk }}    
-                            </span>
-                        </td>
+    <span class="quality-tag
+        {% if submission.quality_of_milk|lower == 'good' %}
+            premium
+        {% elif submission.quality_of_milk|lower == 'moderate' %}
+            standard
+        {% elif submission.quality_of_milk|lower == 'spoiled' %}
+            substandard
+        {% endif %}
+    ">
+        {{ submission.quality_of_milk }}
+    </span>
+</td>
                         <td>{{ submission.timestamp|date:"Y-m-d H:i A" }}</td>
                         
                     </tr>
